gogn komin i grunn og leikja síða sýnir leiki

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,7 +1,13 @@
 <%- include('header') -%>
 
-<div class="link">
-  <a class="link__link" href="/">Til baka</a>
-</div>
+	<div class="error">
+		<h1 class="error__title">
+			<%= title %>
+		</h1>
+	</div>
 
-<%- include('footer') -%>
+	<div class="link">
+		<a class="link__link" href="/">Til baka</a>
+	</div>
+
+	<%- include('footer') -%>
