--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,7 +1,8 @@
-  </main>
-  <footer>
-    <p>Þessi síða var búin til: <%= locals.time %></p>
-  </footer>
+</main>
+<footer>
+	<p>Þessi síða var búin til: <%= locals.time %>
+	</p>
+</footer>
 </body>
 
 </html>
