--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,18 +8,15 @@
 </head>
 
 <body>
+	<header>
+		<nav>
+			<ul>
+				<li><a href="/">Forsíða</a></li>
+				<li><a href="/leikir">Leikir</a></li>
+				<li><a href="/stada">Staða</a></li>
+				<li><a href="/login">Innskrá</a></li>
+			  </ul>
+		</nav>
+	</header>
   <main>
 
-    <h1><%= locals.title ?? '' %></h1>
-
-    <% if (locals.loggedIn) { %>
-      <p>Innsrkáður notandi: <%= locals.user.name %> (<%= locals.user.username %>)
-    <% } else { %>
-      <p>Þú ert ekki innskráður notandi.</p>
-    <% } %>
-
-    <ul>
-      <li><a href="/">Forsíða</a></li>
-      <li><a href="/leikir">Leikir</a></li>
-      <li><a href="/stada">Staða</a></li>
-    </ul>
