admin sida og submit

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,5 +1,7 @@
 <%- include('header') -%>
 
-admin!
+	<%- include('skra') %>
 
-<%- include('footer') -%>
+		<%- include('tableleikir') %>
+
+			<%- include('footer') -%>
