--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,19 @@
 <%- include('header') -%>
 
-<form method="post" action="/login" autocomplete="off">
-  <label>Notendanafn: <input type="text" name="username"></label>
-  <label>Lykilorð: <input type="password" name="password"></label>
-  <button>Innskrá</button>
-</form>
+	<h1>Innskráning</h1>
 
-<%- include('footer') -%>
+	<form class="form" method="post" action="/login" autocomplete="off">
+		<%- include('user') -%>
+
+			<% if (message) { %>
+				<p>
+					<%= message %>
+				</p>
+				<% } %>
+
+					<button class="button">Innskrá</button>
+	</form>
+
+	<a href="/">Til baka</a>
+
+	<%- include('footer') -%>
