--- a/views/skra.ejs
+++ b/views/skra.ejs
@@ -1,25 +1,29 @@
-<%- include('header') -%>
-
-<h1>Seinustu leikir</h1>
+<h1>Bæta við leik</h1>
 
 <form method="post" action="/skra">
-  <div>
-    <label for="home_name">Heima lið</label>
-    <input type="text" id="home_name" name="home_name">
-  </div>
-  <div>
-    <label for="home_score">Heima skor</label>
-    <input type="text" id="home_score" name="home_score">
-  </div>
-  <div>
-    <label for="away_name">Úti lið</label>
-    <input type="text" id="away_name" name="away_name">
-  </div>
-  <div>
-    <label for="away_score">Úti lið skor</label>
-    <input type="text" id="away_score" name="away_score">
-  </div>
-  <button>Skrá</button>
+	<div>
+		<label for="when">Dagsetning?</label>
+		<input type="date" id="whendate" name="when" required>
+	</div>
+	<div>
+		<label for="homename">Heima lið</label>
+		<select id="homename" list="teams" name="homename" required>
+			<%- include("teamoption") %>
+		</select>
+	</div>
+	<div>
+		<label for="homescore">Heima skor</label>
+		<input type="number" id="homescore" name="homescore" min="0" value="0" required>
+	</div>
+	<div>
+		<label for="awayname">Úti lið</label>
+		<select id="awayname" list="teams" name="awayname" required>
+			<%- include("teamoption") %>
+		</select>
+	</div>
+	<div>
+		<label for="awayscore">Úti lið skor</label>
+		<input type="number" id="awayscore" name="awayscore" min="0" value="0" required>
+	</div>
+	<button>Skrá</button>
 </form>
-
-<%- include('footer') -%>
