--- a/views/header.ejs
+++ b/views/header.ejs
@@ -20,6 +20,9 @@
 					<li>
 						<a href="/logout">Útskrá</a>
 					</li>
+					<li>
+						<a href="/admin">Umsjónarsíða</a>
+					</li>
 					<% } else { %>
 						<li>
 							<a href="/login">Innskrá</a>
