--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,62 @@
-html {
-  background-color: #f5f5f5;
+body {
+	margin: 0 auto;
+	width: fit-content;
+	min-height: 100vh;
+	max-width: 95vw
+}
+
+header {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	justify-content: space-between;
+	align-items: center;
+	padding: 1em 1em 1em 0;
+}
+
+nav {
+	justify-self: center;
+	width: 100%;
+	justify-content: center;
+}
+
+nav ul {
+	display: flex;
+	gap: 1em;
+	flex-wrap: wrap;
+}
+
+main ul {
+	padding: 0;
+}
+
+li {
+	list-style: none;
+}
+
+a {
+	display: flex;
+	flex-direction: row;
+	margin: 0.5em;
+	color: inherit;
+	text-decoration: none;
+	border: 1px black solid;
+	padding: 0.25em 1em;
+	border-radius: 1em;
+	flex: 1;
+	justify-content: start;
+}
+
+a section {
+	align-self: flex-start;
+}
+
+footer {
+	padding: 1em;
+	margin: 0 auto;
+	max-width: 800px;
+}
+
+table {
+	margin: 0 auto;
 }
