--- a/views/stada.ejs
+++ b/views/stada.ejs
@@ -3,13 +3,13 @@
 	<h1>Staðan í deildinni</h1>
 
 	<table>
-		<thead>
+		<thead class="stadatabla">
 			<tr>
 				<th>Lið</th>
 				<th>Stig</th>
 			</tr>
 		</thead>
-		<tbody>
+		<tbody class="stadatabla">
 			<% for (const team of locals.stadan) { %>
 				<tr>
 					<td>
