--- a/public/styles.css
+++ b/public/styles.css
@@ -68,7 +68,10 @@ footer {
 
 table {
 	text-align: center;
-	margin: 0 auto;
+	border-top: black 1px solid;
+	border-bottom: black 1px solid;
+	padding: 0.25em 0 1em;
+	margin: 1em auto 0;
 }
 
 .form {
@@ -97,6 +100,7 @@ tr {
 
 .stadatabla tr {
 	grid-template-columns: repeat(2, 1fr);
+	padding: 0.25em 0;
 }
 
 .newdate {
