setti options i option ejs

--- a/views/teamoption.ejs
+++ b/views/teamoption.ejs
@@ -1,3 +1,4 @@
+<option value="">--Veldu lið--</option>
 <% for (const team of locals.teams) { %>
 	<option value="<%= team.id %>">
 		<%= team.name %>
